guerillabackup (0.4.0~rc-20230119) unstable; urgency=low

  Features:
  * StorageTool:
    * Improved messages for interval policy violations and how to fix.
    * Warn about files not having any applicable policies defined.
    * Made policy inheritance control more explicit, improved
      documentation.
  Bugfixes:
  * BackupGenerator:
    * Fixed invalid executable path in systemd service templates.
    * Fixed backup generation pipeline race condition on asynchronous
      shutdown.
    * Applied pylint.
  * StorageTool:
    * Removed anti-file-deletion protection left in code accidentally.
    * Fixed Interval policy status handling when applying retention
      policies.
    * Fixed deletion mark handling with concurrent retention
      policies.
    * Fixed exception attempting element retrieval from nonexisting
      source.
    * Fixed error message typos.

 -- halfdog <me@halfdog.net>  Thu, 19 Jan 2023 14:01:01 +0000

guerillabackup (0.3.0) unstable; urgency=low

  Features:
  * Added StorageTool policy support to verify sane backup intervals
    and to apply data retention policies.

 -- halfdog <me@halfdog.net>  Wed, 30 Nov 2022 15:55:59 +0000

guerillabackup (0.2.0) unstable; urgency=low

  Features:
  * Added StorageTool to check storage data status, currently
    only checking for invalid file names in the storage directory.
  Bugfixes:
  * Improved TransferService error messages and formatting mistake
    in man page.

 -- halfdog <me@halfdog.net>  Wed, 15 Jun 2022 07:57:19 +0000

guerillabackup (0.1.1) unstable; urgency=low

  * Bugfixes:
    * Correct handling of undefined start condition

 -- halfdog <me@halfdog.net>  Sat, 15 Jan 2022 08:56:30 +0000

guerillabackup (0.1.0) unstable; urgency=low

  * Features:
    * Added flexible backup generator run condition support

 -- halfdog <me@halfdog.net>  Sun,  5 Sep 2021 18:31:00 +0000

guerillabackup (0.0.2) unstable; urgency=low

  * Fixes: